# humanoid

./: .gitignore
humanoid-ai/: pyproject.toml  run_experiments.py  stats_dashboard.py  train_humanoid.py  train_humanoid_ppo.py  train_humanoid_sac.py  train_humanoid_td3.py  train_humanoid_tqc.py  utils.py
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775528928/: events.out.tfevents.1775528928.Zane.15092.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775529036/: events.out.tfevents.1775529036.Zane.17320.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775529204/: events.out.tfevents.1775529204.Zane.11776.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775529263/: events.out.tfevents.1775529263.Zane.26432.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775529679/: events.out.tfevents.1775529679.Zane.22480.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775529698/: events.out.tfevents.1775529698.Zane.9840.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775534542/: events.out.tfevents.1775534542.Zane.17580.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775534569/: events.out.tfevents.1775534569.Zane.16792.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775534589/: events.out.tfevents.1775534589.Zane.30508.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775534635/: events.out.tfevents.1775534635.Zane.26984.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775534640/: events.out.tfevents.1775534640.Zane.30560.0
humanoid-ai/runs/Humanoid-v4__train_humanoid__1__1775630621/: agent_final.pt  (+2 more)
(+330 files in other folders)
